# linphone-desktop

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  application_info.cmake  build_all_linux.sh  build_all_macos.sh  build_all_win.bat  config.h.cmake  create_appimage.sh  prepare.conf  prepare.py  resources.qrc
Linphone/: CMakeLists.txt  application_info.cmake  config.h.cmake  main.cpp
Linphone/core/: App.cpp  App.hpp  CMakeLists.txt
Linphone/core/account/: Account.cpp  Account.hpp  AccountCore.cpp  AccountCore.hpp  AccountDeviceCore.cpp  AccountDeviceCore.hpp  AccountDeviceGui.cpp  AccountDeviceGui.hpp  AccountDeviceList.cpp  AccountDeviceList.hpp  AccountDeviceProxy.cpp  AccountDeviceProxy.hpp  AccountGui.cpp  AccountGui.hpp  AccountList.cpp  AccountList.hpp  AccountProxy.cpp  AccountProxy.hpp
Linphone/core/address-books/: LdapCore.cpp  LdapCore.hpp  LdapList.cpp  LdapList.hpp  LdapProxy.cpp  LdapProxy.hpp
Linphone/core/call/: Call.cpp  Call.hpp  CallCore.cpp  CallCore.hpp  CallGui.cpp  CallGui.hpp  CallList.cpp  CallList.hpp  CallProxy.cpp  CallProxy.hpp
Linphone/core/call-history/: CallHistoryCore.cpp  CallHistoryCore.hpp  CallHistoryGui.cpp  CallHistoryGui.hpp  CallHistoryList.cpp  CallHistoryList.hpp  CallHistoryProxy.cpp  CallHistoryProxy.hpp
Linphone/core/camera/: CameraDummy.cpp  CameraDummy.hpp  CameraGui.cpp  CameraGui.hpp  PreviewManager.cpp  PreviewManager.hpp
Linphone/core/chat/: ChatCore.cpp  ChatCore.hpp  ChatGui.cpp  ChatGui.hpp  ChatList.cpp  ChatList.hpp  ChatProxy.cpp  ChatProxy.hpp
Linphone/core/conference/: ConferenceCore.cpp  ConferenceCore.hpp  ConferenceGui.cpp  ConferenceGui.hpp  ConferenceInfoCore.cpp  ConferenceInfoCore.hpp  ConferenceInfoGui.cpp  ConferenceInfoGui.hpp  ConferenceInfoList.cpp  ConferenceInfoList.hpp  ConferenceInfoProxy.cpp  ConferenceInfoProxy.hpp
Linphone/core/emoji/: EmojiList.cpp  EmojiList.hpp  EmojiModel.cpp  EmojiModel.hpp  EmojiProxy.cpp  EmojiProxy.hpp
Linphone/core/event-count-notifier/: AbstractEventCountNotifier.cpp  AbstractEventCountNotifier.hpp  EventCountNotifierMacOs.hpp  EventCountNotifierMacOs.m  EventCountNotifierSystemTrayIcon.cpp  EventCountNotifierSystemTrayIcon.hpp
Linphone/core/event-filter/: LockEventFilter.cpp  LockEventFilter.hpp
Linphone/core/fps-counter/: FPSCounter.cpp  FPSCounter.hpp
Linphone/core/friend/: FriendCore.cpp  FriendCore.hpp  FriendGui.cpp  FriendGui.hpp  FriendInitialProxy.cpp  FriendInitialProxy.hpp
Linphone/core/logger/: QtLogger.cpp  QtLogger.hpp
Linphone/core/login/: LoginPage.cpp  LoginPage.hpp
Linphone/core/notifier/: AbstractNotificationBackend.cpp  AbstractNotificationBackend.hpp  DesktopNotificationManagerCompat.cpp  DesktopNotificationManagerCompat.hpp  NotificationActivator.cpp  NotificationActivator.hpp  Notifier.cpp  Notifier.hpp  SysTrayNotificationBackend.cpp  SysTrayNotificationBackend.hpp  WindowsNotificationBackend.cpp  WindowsNotificationBackend.hpp
Linphone/core/participant/: ParticipantCore.cpp  ParticipantCore.hpp  ParticipantDeviceCore.cpp  ParticipantDeviceCore.hpp  ParticipantDeviceGui.cpp  ParticipantDeviceGui.hpp  ParticipantDeviceList.cpp  ParticipantDeviceList.hpp  ParticipantDeviceProxy.cpp  ParticipantDeviceProxy.hpp  ParticipantGui.cpp  ParticipantGui.hpp  ParticipantInfoList.cpp  ParticipantInfoList.hpp  ParticipantInfoProxy.cpp  ParticipantInfoProxy.hpp  ParticipantList.cpp  ParticipantList.hpp  ParticipantProxy.cpp  ParticipantProxy.hpp
Linphone/core/path/: Paths.cpp  Paths.hpp
Linphone/core/payload-type/: DownloadablePayloadTypeCore.cpp  DownloadablePayloadTypeCore.hpp  PayloadTypeCore.cpp  PayloadTypeCore.hpp  PayloadTypeGui.cpp  PayloadTypeGui.hpp  PayloadTypeList.cpp  PayloadTypeList.hpp  PayloadTypeProxy.cpp  PayloadTypeProxy.hpp
Linphone/data/: CMakeLists.txt  fonts.qrc
Linphone/model/: CMakeLists.txt
Linphone/tool/: AbstractObject.hpp  CMakeLists.txt  Constants.cpp  Constants.hpp  EnumsToString.cpp  EnumsToString.hpp  LinphoneEnums.cpp  LinphoneEnums.hpp  QExifImageHeader.cpp  QExifImageHeader.hpp  UriTools.cpp  UriTools.hpp  Utils.cpp  Utils.hpp  config.h.cmake
Linphone/view/: CMakeLists.txt
cmake_builder/linphone_package/: CMakeLists.txt  Info.plist.in  MacPackaging.cmake.in  NSIS.template.in  README.openh264.txt.in  WindowsPackaging.cmake.in  linphone.icns  linphone_dmg.scpt  openh264-install.nsi.in  openh264-uninstall.nsi  signtool.py  uninstall.nsi  uri-handler-install.nsi.in  winshortcut.vbs.in
linphone-app/: CMakeLists.txt  application_info.cmake  resources.qrc  webview_resources.qrc
linphone-app/assets/: linphone.desktop.cmake  linphonerc-factory  qt.conf  qt.conf.in
linphone-app/cmake/: FindBCToolbox.cmake  FindBcToolbox.cmake  FindBelcard.cmake  FindBelleSIP.cmake  FindBelr.cmake  FindISpell.cmake  FindLibLinphone.cmake  FindLibLinphoneCxx.cmake  FindLime.cmake  FindLinphone.cmake  FindLinphoneCxx.cmake  FindMediastreamer2.cmake  FindOpenLDAP.cmake  FindOrtp.cmake  FindQtKeychain.cmake
linphone-app/cmake_builder/: CMakeLists.txt  additional_steps.cmake
linphone-app/src/: config.h.cmake
linphone-app/tools/: create_appimage.sh  sign_package.bat  sign_package.sh
linphone-desktop/: .gitignore  CMakeLists.txt  config.h.cmake  linphone.desktop  linphone.rc  resources.qrc
linphone-desktop/assets/: linphonerc-factory
linphone-desktop/cmake_builder/: CMakeLists.txt
linphone-desktop/src/: LinphoneUtils.hpp  Utils.cpp  Utils.hpp  main.cpp  utils.cpp  utils.hpp
linphone-desktop/tools/: update_resources
plugins/: CMakeLists.txt
plugins/contacts/: CMakeLists.txt
plugins/example/: CMakeLists.txt
tests/: CMakeLists.txt  build_resources_file  linphone.pro  resources.qrc  update_project  update_resources
tests/dev_scripts/: update_resources
tests/languages/: CMakeLists.txt  en.ts  fr.ts
tests/scripts/: build_resources_file  update_languages  update_linphone
tests/src/: app.cpp  app.hpp  logger.cpp  logger.hpp  main.cpp  utils.hpp
tests/tools/: check_qml  check_qml_syntax  test_qml  update_resources
tests/ui/: main_window.qml
(+2831 files in other folders)
